--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 5432:5432
     volumes:
       - video-data:/var/lib/postgresql/data
-      - ./document/data.sql:/docker-entrypoint-initdb.d/data.sql
+      - ./documents/data.sql:/docker-entrypoint-initdb.d/data.sql
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
