--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,12 +12,10 @@
     </parent>
 
     <artifactId>common</artifactId>
+    <description>Common module</description>
     <packaging>jar</packaging>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <dependencies>
+    </dependencies>
 
 </project>
