--- a/util/pom.xml
+++ b/util/pom.xml
@@ -5,14 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.0</version>
+        <groupId>com.itsthatjun.media-stream-microservice</groupId>
+        <artifactId>media-stream-microservice</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>Util</artifactId>
-    <name>Util</name>
     <description>Util module</description>
     <packaging>jar</packaging>
 
