--- a/video/pom.xml
+++ b/video/pom.xml
@@ -12,11 +12,19 @@
     </parent>
 
     <artifactId>Video</artifactId>
-    <name>Video</name>
     <description>Video module</description>
     <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>com.itsthatjun.media-stream-microservice</groupId>
+            <artifactId>Util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.itsthatjun.media-stream-microservice</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
