--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 				<scope>test</scope>
 			</dependency>
 
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct</artifactId>
+				<version>1.5.5.Final</version>
+			</dependency>
+
 			<!-- database related -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
