added aws s3 storage

--- a/video/src/main/resources/application.yml
+++ b/video/src/main/resources/application.yml
@@ -19,6 +19,11 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         #format_sql: true
 
+aws:
+  s3.bucket-name:
+  access.key.id:
+  secret.access.key:
+
 #logging:
  # level:
 #    org:
