--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<spring.boot-version>3.3.0</spring.boot-version>
+		<spring.cloud-version>2023.0.1</spring.cloud-version>
 		<util.version>0.0.1-SNAPSHOT</util.version>
 		<common.version>0.0.1-SNAPSHOT</common.version>
 	</properties>
@@ -35,11 +37,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>${spring.boot-version}</version>
 		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- other modules -->
 			<dependency>
 				<groupId>com.itsthatjun.media-stream-microservice</groupId>
 				<artifactId>Util</artifactId>
@@ -51,51 +55,77 @@
 				<version>${common.version}</version>
 			</dependency>
 
+			<!-- spring boot core-->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>${spring.boot-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-webflux</artifactId>
+				<version>${spring.boot-version}</version>
+			</dependency>
+
+			<!-- util dependencies-->
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
 				<version>1.18.30</version>
 			</dependency>
 
+			<!-- spring cloud -->
 			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-web</artifactId>
-				<version>3.3.0</version>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring.cloud-version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-webflux</artifactId>
-				<version>3.3.0</version>
-			</dependency>
+
+			<!-- test -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-test</artifactId>
-				<version>3.3.0</version>
+				<version>${spring.boot-version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>io.projectreactor</groupId>
 				<artifactId>reactor-test</artifactId>
-				<version>3.3.0</version>
+				<version>${spring.boot-version}</version>
 				<scope>test</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.mapstruct</groupId>
-				<artifactId>mapstruct</artifactId>
-				<version>1.5.5.Final</version>
 			</dependency>
 
 			<!-- database related -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-data-jpa</artifactId>
-				<version>3.3.0</version>
+				<version>${spring.boot-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
 				<version>42.2.8</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct</artifactId>
+				<version>1.5.5.Final</version>
+			</dependency>
+
+			<!-- Amazon s3 -->
+			<dependency>
+				<groupId>software.amazon.awssdk</groupId>
+				<artifactId>s3</artifactId>
+				<version>2.24.9</version>
+			</dependency>
+
+			<!-- Spring Cloud AWS (optional but useful for easier configuration) -->
+			<dependency>
+				<groupId>io.awspring.cloud</groupId>
+				<artifactId>spring-cloud-aws-context</artifactId>
+				<version>3.0.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
