--- a/video/pom.xml
+++ b/video/pom.xml
@@ -54,6 +54,13 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
+        <!-- Amazon s3 storage -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
