--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 		<spring.cloud-version>2023.0.1</spring.cloud-version>
 		<util.version>0.0.1-SNAPSHOT</util.version>
 		<common.version>0.0.1-SNAPSHOT</common.version>
+		<lombok.version>1.18.30</lombok.version>
+		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<postgres.version>42.2.8</postgres.version>
+		<aws.s3.version>2.24.9</aws.s3.version>
+		<aws.spring.cloud>3.0.0</aws.spring.cloud>
 	</properties>
 
 	<dependencies>
@@ -71,7 +76,7 @@
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
-				<version>1.18.30</version>
+				<version>${lombok.version}</version>
 			</dependency>
 
 			<!-- spring cloud -->
@@ -106,26 +111,26 @@
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>42.2.8</version>
+				<version>${postgres.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mapstruct</groupId>
 				<artifactId>mapstruct</artifactId>
-				<version>1.5.5.Final</version>
+				<version>${mapstruct.version}</version>
 			</dependency>
 
 			<!-- Amazon s3 -->
 			<dependency>
 				<groupId>software.amazon.awssdk</groupId>
 				<artifactId>s3</artifactId>
-				<version>2.24.9</version>
+				<version>${aws.s3.version}</version>
 			</dependency>
 
 			<!-- Spring Cloud AWS (optional but useful for easier configuration) -->
 			<dependency>
 				<groupId>io.awspring.cloud</groupId>
 				<artifactId>spring-cloud-aws-context</artifactId>
-				<version>3.0.0</version>
+				<version>${aws.spring.cloud}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
