--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
 				<artifactId>spring-cloud-aws-context</artifactId>
 				<version>${aws.spring.cloud}</version>
 			</dependency>
+
+
+			<dependency>
+				<groupId>io.awspring.cloud</groupId>
+				<artifactId>spring-cloud-aws-context</artifactId>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
